# slide-examiner

./: .env.example  .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
configs/: part2_merge.yaml  part2_merge_v2.yaml  part2_qlora.yaml  part2_qlora_derisk.yaml  part2_qlora_v2.yaml
data/: README.md
docs/: ENVIRONMENT.md  IMPLEMENTATION_STATUS.md  PART3_PREP.md  PART3_RUNBOOK.md  REAL_DATA_PREP.md  annotation_protocol.md
paper/: .gitignore  build_paper.sh  main.tex
reports/: README.md  _e1_decomp.md  _e8_affected_inventory.md  _e8_canonical_diagnosis.md  _e8_class_render_audit.md  _e8_corrected_summary.md  _e8_data_audit.md  _e8_data_regen.md  _e8_g6_internal_ready.md  _e8_g6_linter_coverage.md  _e8_g6_s6_results.md  _e8_linter_coverage.md  _e8_relg3.md  _e8_reward_g5.md  _e8_roster.md  _e8_spotcheck.md  _e8_table2_cells.md  _p1_tables.md  _p2_tables.md  _pc_real_tables.md  _s1_atomic_specificity_tradeoff.md  g7_r5_prevalence.md  part1_dataset_freeze.md  part1_encoder_geometry.md  part1_geometry_threshold.md  part1_linter_track.md  part1_resolution_ablation.md  part1_resolution_forcedchoice.md  part1_s6_manifest.md  part1_sgroup_30b.md  part1_sgroup_crosssize.md  part1_term_consistency.md  part2.md  part3.md  part3_c0plus_rc01.md  part3_cold_emails.md  part3_discussion.md  part3_hacking.md  part3_hybrid.md  part3_multiplicity.md  (+4 more)
scripts/: _wandb_health.py  caption_images.py  g13_fc_build.py  g13_fc_report.py  g13_forced_choice.py  part1_build_corpus.py  part1_build_dataset.py  part1_encoder_report.py  part1_freeze_dataset.py  part1_geometry_report.py  part1_image_corpus.py  part1_linter_track.py  part1_s6_report.py  part1_sgroup_crosssize.py  part1_sgroup_report.py  part1_synthesis.py  part1_term_consistency_eval.py  part2_build_corpus.py  part2_build_dataset.py  part2_build_sft.py  part2_deck_robustness_eval.sh  part2_eval.py  part2_linter_eval.py  part2_render_clean_decks.py  part2_serve_and_eval.sh  part2_slideaudit_eval.py  part2_synthesis.py  part3_analyze.sh  part3_api_pipeline.sh  part3_build_g7.py  part3_build_tasks.py  part3_e1_decomp.py  part3_e5_figure.py  part3_e5_recovered.py  part3_e6_actionability.py  part3_e6_figure.py  part3_e6_parallel.py  part3_e6_unfloored_sweep.sh  part3_e8_add_g3_strata.py  part3_e8_artifact_figure.py  (+75 more)
slide_examiner/: __init__.py  adapters.py  analysis.py  api_config.py  audit.py  cli.py  data_prep.py  data_sources.py  dataset.py  defect_types.py  distribution.py  downstream_regime.py  elicit_common.py  elicit_freeform.py  elicit_pairwise.py  examiner_contract.py  experiment.py  feedback_sources.py  generator.py  geometry.py  gepa_eval.py  gepa_runner.py  hacking.py  hybrid_critic.py  hypotheses.py  ingest.py  injection.py  io.py  matrix.py  model_adapters.py  optim_runtime.py  orchestrator.py  panel.py  part3_experiment.py  part3_quality.py  power.py  pptx_ingest.py  probe.py  render.py  repair.py  (+15 more)
specs/: EXAMINER_IO_CONTRACT.md  NOVELTY analysis 2026-06.md  PAPER_SPINE.md  PART2_FINALIZE_GUIDE_for_CC.md  SPEC_slide_examiner_attribution.md  e1_paper_integration_staging.md  part3_pending.md  todo.md  todo_0623.md  todo_0625.md  todo_20260620.md  todo_20260622.md
tests/: test_adapters.py  test_analysis.py  test_audit.py  test_data_prep.py  (+36 more)
(+1804 files in other folders)
