[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slide-examiner"
version = "0.1.0"
description = "SlideProbe attribution, synthetic defect injection, and examiner evaluation toolkit."
requires-python = ">=3.10"
dependencies = ["pydantic>=2"]

[project.optional-dependencies]
dev = ["pytest>=8"]
render = ["playwright>=1.40", "python-pptx>=0.6.23"]
vlm = ["transformers>=4.50", "accelerate>=0.30", "pillow>=10"]
all = [
  "pytest>=8",
  "playwright>=1.40",
  "python-pptx>=0.6.23",
  "transformers>=4.50",
  "accelerate>=0.30",
  "pillow>=10",
]

[project.scripts]
slide-examiner = "slide_examiner.cli:main"

[tool.setuptools.packages.find]
include = ["slide_examiner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
