[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slide-examiner"
version = "0.1.0"
description = "SlideProbe attribution, synthetic defect injection, and examiner evaluation toolkit."
requires-python = ">=3.10"
# Core is intentionally tiny: the package imports only pydantic at module load
# time; every heavy/optional dependency is imported lazily inside the function
# that needs it, so `import slide_examiner` and the CLI stay portable.
dependencies = ["pydantic>=2"]

[project.optional-dependencies]
# ---- portable tiers: cross-platform wheels, no CUDA, install anywhere --------
analysis = ["numpy>=1.24", "scipy>=1.10"]                      # diagnosis metrics / stats / power
render   = ["playwright>=1.40", "python-pptx>=0.6.23", "pillow>=10"]  # raster + PPTX geometry
data     = ["pyarrow>=12"]                                     # benchmark arrow/parquet ingest
api      = ["openai>=1.30"]                                    # hosted OpenAI-compatible adapters
figures  = ["matplotlib>=3.7"]                                 # report / paper figures

# Self-contained test baseline: a fresh clone runs `pytest` green on any OS, no
# GPU. Covers every third-party module the test suite imports.
test = ["pytest>=8", "slide-examiner[analysis,render,data]"]
dev  = ["ruff>=0.4", "slide-examiner[test]"]
# Portable everything (CPU-only): full CLI + tests + figures, still no GPU.
all  = ["slide-examiner[dev,api,figures]"]

# ---- machine-specific tier: needs a GPU + a CUDA-matched torch/vLLM ----------
# torch and vllm are deliberately NOT declared here — their wheels must match the
# local CUDA toolkit (see docs/ENVIRONMENT.md). Install them first, then:
vlm   = ["slide-examiner[render,api]", "transformers>=4.50", "accelerate>=0.30",
         "qwen-vl-utils", "safetensors"]                       # local VLM inference
train = ["transformers>=4.50", "accelerate>=0.30", "peft>=0.11", "wandb"]  # QLoRA examiner
optim = ["gepa"]                                               # GEPA downstream optimizer

[project.scripts]
slide-examiner = "slide_examiner.cli:main"

[tool.setuptools.packages.find]
include = ["slide_examiner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
